# vericuda

./: .gitignore  Makefile  README.md
bench/: README.md  atomic_reduce.cu  run_bench.sh  tree_reduce.cu
coq/: MIRConcurrent.v  MIRRelaxed.v  MIRRun.v  MIRSemantics.v  MIRSyntax.v  MIRTests.v  MP.v  MPCandidates.v  MPRealizable.v  PTXEvents.v  PTXHB.v  PTXRelations.v  Reduction.v  Soundness.v  Translate.v  _CoqProject
coq/examples/: atomic_flag_gen.v  gemm_gemm_naive_gen.v  gemm_gemm_tiled_gen.v  i128_gen.v  reduction_gen.v  saxpy_gen.v  sha_sha256_incremental_gen.v  sha_sha256_oneshot_gen.v  sha_sha512_incremental_gen.v  sha_sha512_oneshot_gen.v  vecadd_gen.v
docs/: mapping-table.md  ptx-coq-notes.md  step-1-rust-repro.md  step-2-mir-coq.md  step-5-bridge-lemmas.md  step-6-reduction.md
examples/: Cargo.toml  atomic_bad.rs  build.rs  reduction.rs  vecadd.rs
examples/atomic_bad/kernel/: Cargo.toml
examples/atomic_bad/kernel/src/: lib.rs
examples/atomic_flag/kernel/: Cargo.toml
examples/atomic_flag/kernel/src/: lib.rs
examples/gemm/kernel/: Cargo.toml
examples/gemm/kernel/src/: lib.rs
examples/i128/kernel/: Cargo.toml
examples/i128/kernel/src/: lib.rs
examples/saxpy/kernel/: Cargo.toml
examples/saxpy/kernel/src/: lib.rs
examples/sha/kernel/: Cargo.toml
examples/sha/kernel/src/: lib.rs
examples/src/: lib.rs  main.rs
examples/test/: atomic_bad.rs  atomic_flag.rs  saxpy.rs  sha.rs  vecadd.rs
examples/vecadd/kernel/: Cargo.toml
tools/: check_ptx.sh  mir2coq.py  test_mir2coq.py
tools/mir2coq/: ast_expr.py  ast_stmt.py  cli.py  line_terms.py  (+5 more)
(+4 files in other folders)
