[package]
name = "cuq_examples"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
cuda_std = { version = "0.2", default-features = false }
glam = { version = "0.30.1", default-features = false, features = ["cuda", "nostd-libm"] }
sha2 = { version = "0.10", default-features = false }
